--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "express": "^5.1.0",
+    "husky": "^9.1.7",
     "mongodb": "^6.15.0",
     "moongose": "^1.0.0"
   },
